accessbility features and mobile for form

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li><a href="#" target="_blank">Resume</a></li>
         <li><a href="#contact"> Contact </a></li>
         <li><a href="#projects">Projects</a></li>
-        <li class="send-message-link"><a href="/contact">Send a message</a></li>
+
 
       </ul>
     </nav>
@@ -40,7 +40,6 @@
         <li><a href="#" target="_blank">Resume</a></li>
         <li><a href="#contact"> Contact </a></li>
         <li><a href="#projects">Projects</a></li>
-        <li class="send-message-link"><a href="/contact">Send a message</a></li>
         <li class="close-nav-button"><button aria-label="close navigation"><svg width="40" height="40"
               viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" class="close-button">
               <defs>
@@ -76,7 +75,7 @@
           <strong class="profession">
             Front End Developer & <br> Web Accessibility Specialist
           </strong>
-          <a class="button-form-contact" href="#">Contact</a>
+          <a class="button-form-contact" href="./contact.html">Contact</a>
         </div>
         <img class="geici-image" src="./assets/images/profile/file.png"
           alt="Geiciane Barham, a woman with long hair and brown shirt" />
@@ -85,121 +84,125 @@
 
     <section>
       <div class="hero-image-test">
-        <img  src="./assets/images/technologies/tech-less-real.jpg"
-        alt="" aria-hidden="true" />
+        <img src="./assets/images/technologies/tech-less-real.jpg" alt="" aria-hidden="true" />
         <div class="text-container">
-        <strong id="typewriter" class="typewriter"></strong>
-       <p>
-          Detail-oriented Full Stack Web Developer specializing in front-end development and web accessibility.
-          Experienced with single-page applications and Adobe Experience Manager (AEM). Fast learner with a background
-          in English teaching, enhancing problem-solving, time management, communication, and teamwork skills to
-          deliver high-quality, accessible web solutions. <br>
-          Some of the technologies I have used include:
-        </p> 
-        <ul class="technology-list">
-          <li>
-            <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
-              viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
-              <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
-                <path
-                  d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
-              </g>
-            </svg>HTML, CSS, and JavaScript, React, Handlebars, Sass, Less, Bootstrap
-          </li>
+          <h2 id="typewriter" class="typewriter"></h2>
+          <p>
+            Detail-oriented Full Stack Web Developer specializing in front-end development and web accessibility.
+            Experienced with single-page applications and Adobe Experience Manager (AEM). Fast learner with a background
+            in English teaching, enhancing problem-solving, time management, communication, and teamwork skills to
+            deliver high-quality, accessible web solutions. <br>
+            Some of the technologies I have used include:
+          </p>
+          <ul class="technology-list">
+            <li>
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
+                viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
+                  <path
+                    d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
+                </g>
+              </svg>HTML, CSS, and JavaScript, React, Handlebars, Sass, Less, Bootstrap
+            </li>
 
-          <li>
-            <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
-              viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
-              <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
-                <path
-                  d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
-              </g>
-            </svg>Express, Node.js
-          </li>
-          <li>
-            <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
-              viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
-              <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
-                <path
-                  d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
-              </g>
-            </svg>GraphQL, SQL, MySQL, Sequelize, MongoDB, REST APIs
-          </li>
-          <li>
-            <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
-              viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
-              <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
-                <path
-                  d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
-              </g>
-            </svg>Adobe Experience Manager, Content Management Systems
-          </li>
-          <li>
-            <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
-              viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
-              <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
-                <path
-                  d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
-              </g>
-            </svg>WCAG (Web Content Accessibility Guidelines)
-          </li>
-          <li>
-            <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
-              viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
-              <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
-                <path
-                  d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
-              </g>
-            </svg>ARIA (Accessible Rich Internet Applications) and other elements to enhance web accessibility
-          </li>
-          <li>
-            <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
-              viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
-              <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
-                <path
-                  d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
-              </g>
-            </svg>NVDA, JAWS, and other screen readers for testing web accessibility
-          </li>
-          <li>
-            <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
-              viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
-              <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
-                <path
-                  d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
-              </g>
-            </svg>GDPR compliance expertise in JavaScript and data privacy principles
-          </li>
-        </ul>
-      
-      </div>
+            <li>
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
+                viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
+                  <path
+                    d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
+                </g>
+              </svg>Express, Node.js
+            </li>
+            <li>
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
+                viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
+                  <path
+                    d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
+                </g>
+              </svg>GraphQL, SQL, MySQL, Sequelize, MongoDB, REST APIs
+            </li>
+            <li>
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
+                viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
+                  <path
+                    d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
+                </g>
+              </svg>Adobe Experience Manager, Content Management Systems
+            </li>
+            <li>
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
+                viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
+                  <path
+                    d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
+                </g>
+              </svg>WCAG (Web Content Accessibility Guidelines)
+            </li>
+            <li>
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
+                viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
+                  <path
+                    d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
+                </g>
+              </svg>ARIA (Accessible Rich Internet Applications) and other elements to enhance web accessibility
+            </li>
+            <li>
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
+                viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
+                  <path
+                    d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
+                </g>
+              </svg>NVDA, JAWS, and other screen readers for testing web accessibility
+            </li>
+            <li>
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
+                viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
+                  <path
+                    d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
+                </g>
+              </svg>GDPR compliance expertise in JavaScript and data privacy principles
+            </li>
+          </ul>
+
+        </div>
 
       </div>
     </section>
-  
+
     <section class="projects-section">
-      <h2>Projects</h2>
+      <h3 class="projects-title">Projects</h3>
       <div id="projects" class="projects-grid">
 
         <!-- card 1 -->
         <div class="project-card">
           <div class="image-container">
             <div class="image-wrapper">
-              <img src="./assets/images/project/coffee-example.png" alt="Coffee Project">
+              <img src="./assets/images/project/math-project.webp" alt="Coffee Project">
             </div>
           </div>
           <div class="card-text-container">
-            <h3>Caffien Lisatae srunnq</h3>
-            <p>Western coffi and teea bran loovreiscasses and the bes tea solittes from comss panies and more ...</p>
-            <button>Mento</button>
+            <h3>Sum and Have Fun!</h3>
+            <p>An elementary addition application designed for second graders, which utilizes the Math.js API for
+              computations.</p>
+
+            <a aria-label="visit sum and fun website" href="https://geicibarham.github.io/Geiciane-sum/">View App</a>
+            <a aria-label="visit sum and fun repository" href="https://github.com/geicibarham/Geiciane-sum">View repository</a>
+
           </div>
+         
         </div>
 
         <!-- card 2 -->
         <div class="project-card-brown">
           <div class="image-container">
             <div class="image-wrapper">
-              <img src="./assets/images/project/coffee-example.png" alt="Coffee Project">
+              <img src="./assets/images/project/math-project.webp" alt="Coffee Project">
             </div>
           </div>
           <div class="card-text-container">
@@ -267,7 +270,7 @@
     </section>
 
     <footer class="footer">
-      <strong>Get in touch!</strong>
+      <h4>Get in touch!</h4>
       <ul id="contact">
         <li><a href="https://www.linkedin.com/in/geiciane-barham-43b4aa201/" target="_blank"
             aria-label="check my linkedin">
